# ObserverApproach

./: CMakeLists.txt  build.sh  main.cpp  message.cpp  message.h  messaging_service.cpp  messaging_service.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h  subscriber_manager.cpp  subscriber_manager.h
